added some functionality to vendor, added a chat,.html and customer reviews at the bottom of the vendor. also fixed vendor setup

--- a/templates/modify_products.html
+++ b/templates/modify_products.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <div style="padding: 40px; text-align: center;">
-        <h1>Chat with Customers<h1>
+        <h1>Product Management</h1>
         <p>This is where vendors can add, edit, and manage their products.</p>
     </div>
 {% endblock %}
