--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
             <i class="fas fa-user"></i>
         </label>
         <input type="text" name="username" placeholder="username" id="username">
-
+        <p style="display: block; text-align: center;">or</p>
         <input type="email" name="email" placeholder="email" id="email">
 
         <label for="Password">
