--- a/templates/vendor.html
+++ b/templates/vendor.html
@@ -34,14 +34,13 @@
 .plans-showcase {
     display: flex;
     justify-content: center;
-    max-width: 1080px;
+    max-width: 100%;
     margin: 0 auto;
 }
 
 .plan-items {
-    width: 31%;
     min-height: 50vh;
-    margin: 1% auto;
+    margin: 1%;
     border-radius: 5px;
     font-size: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -54,8 +53,11 @@
     overflow: visible;
 }
 
+
 .plan-items div {
     padding: 15px;
+    font-size: 20px;
+    text-align: center;
 }
 
 h1 {
@@ -66,24 +68,6 @@ h1 {
 
 h2, h3 {
     text-align: center;
-}
-
-.sign-up {
-    font-family: 'Lato', sans-serif;
-    display: block;
-    border: 1px solid #381941;
-    background: none;
-    padding: 10px;
-    border-radius: 50px;
-    color: #381941;
-    margin: 0 auto;
-    margin-bottom: 20px;
-    font-size: 14px;
-}
-.sign-up:hover {
-    background-color: #381941;
-    color: white;
-    transition: background-color 0.2s;
 }
 
 .corner-logo1,
@@ -147,36 +131,59 @@ h2, h3 {
 
         <section class="plans-section">
             <div class="plans-showcase">
-                <div class="plan-items">
+                <div class="plan-items" style="width: 31%;max-width: 300px;">
                     <img src="{{ url_for('static', filename='images/flowerbadge.jpg') }}" alt="Badge" class="corner-logo1">
                     <div>
                         <h1 style="padding-top: 40px;">User Info</h1>
                         <img src="{{ url_for('static', filename='images/user-logo.png') }}" alt="" id="user-icon">
                         <h2 style="font-weight: bold;margin-top: 10px;">Vendor</h2>
+                        <p>Username: {{ username }} </p>
                     </div>    
                 </div>
 
-                <div class="plan-items">
+                <div class="plan-items" style="width: 800px;">
                     <img src="{{ url_for('static', filename='images/flowerbadge.jpg') }}" alt="Badge" class="corner-logo2">
                     <div>
                         <h1 style="padding-top: 40px;">Products</h1>
-                    </div>    
-                    <div>
-                        <a href="{{ url_for('modify_products') }}" style="text-decoration: none">
-                            <button class="sign-up" style="padding: 20px;">Modify or Add Products</button>
-                        </a>
-                        <button class="sign-up" style="padding: 20px;">Delete Products</button>
                     </div>
+                    {% for product in products %}
+                    <form method="POST" action="{{ url_for('handle_product_action') }}" class="product_form">
+                        <img src="{{ url_for('static', filename='images/tulip.png') }}" alt="">
+                        <ul class="product">
+                            <li>Product ID: {{ product['product_id']}}</li>
+                            <li>Product Name: {{ product['product_name']}}</li>
+                            <li>Description: {{ product['product_desc']}}</li>
+                            <li>Colors: {{product['product_color']}}
+                            </li>
+                            <li>Sizes: {{product['product_sizes']}}
+                            </li>
+                            <li>Quantity: {{ product['product_quantity']}}</li>
+                            <li>Warranty: {% if product['product_warranty'] %}{{ product['product_warranty'] }}{% else %}No warranty{% endif %}</li>
+                            <li>Original Price: {{ product['original_price']}}</li>
+                            <li>Discount Price: {{ product['discount_price']}}</li>
+                        </ul>
+
+                        <input type="hidden" name="product_id" value="{{product['product_id']}}">
+
+                        <button class="signup" name="action" type="submit" value="edit">Edit</button>
+                        <button class="signup" name="action" type="submit" value="delete">Delete</button>
+                    </form>
+                    {% endfor %}
                 </div>
 
-                <div class="plan-items">
+                <div class="plan-items" style="width: 31%;max-width: 300px;">
                     <img src="{{ url_for('static', filename='images/flowerbadge.jpg') }}" alt="Badge" class="corner-logo3">
                     <div>
                         <h1 style="padding-top: 40px;">Vendor Dashboard</h1>
                     </div>
                     <div>
-                        <a href="{{ url_for('chat') }}" style="text-decoration: none">
-                            <button class="sign-up" style="padding: 20px; font-size: 14px;">Chat with Customers</button>
+                        <a href="{{ url_for('chat') }}" class="sign-up">
+                            Chat with Customers
+                        </a>
+                    </div>
+                    <div>
+                        <a href="{{ url_for('add_product') }}" class="sign-up">
+                            Add Product
                         </a>
                     </div>
                 </div>
