--- a/templates/admin.html
+++ b/templates/admin.html
@@ -98,8 +98,8 @@
                     <div>
                         <h1 style="padding-top: 40px;">Products</h1>
                     </div>
-                    {% for product in products %}
-                    <form method="POST" action="{{ url_for('handle_product_action') }}" class="product_form">
+                    {% for product in products %} 
+                    <form method="POST" action="{{ url_for('admin_handle_product_action') }}" class="product_form">
                         <img src="{{ url_for('static', filename='images/tulip.png') }}" alt="">
                         <ul class="product">
                             <li>Product ID: {{ product['product_id']}}</li>
@@ -128,12 +128,12 @@
                     <div>
                         <h1 style="padding-top: 40px;">Admin Dashboard</h1>
                     </div>
-                
                     <div>
-                        <a href="{{ url_for('add_product') }}" class="sign-up">
+                        <a href="{{ url_for('admin_add_product') }}" class="sign-up">
                             Add Product
                         </a>
                     </div>
+                    
                 </div>
             </div>
         </section>
